Add site info in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "the-great",
+  "name": "paic-getanswerspa",
   "version": "1.0.0",
   "private": true,
-  "description": "the-great",
+  "description": "paic-getanswerspa",
   "author": "Dakota Fabro",
   "keywords": [
     "gatsby"
