--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "paic-getanswerspa",
-  "author": "Dakota Fabro",
+  "author": "Outright Agency",
   "keywords": [
     "gatsby"
   ],
@@ -12,10 +12,12 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest"
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "dotenv": "^16.3.1",
     "gatsby": "^5.12.4",
     "gatsby-core-utils": "^4.12.0",
     "gatsby-plugin-google-gtag": "^5.12.1",
@@ -31,5 +33,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.12.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
