--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-image": "^3.12.1",
     "gatsby-plugin-manifest": "^5.12.1",
     "gatsby-plugin-mdx": "^5.12.1",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.12.1",
     "gatsby-plugin-sharp": "^5.12.1",
     "gatsby-plugin-sitemap": "^6.12.1",
@@ -32,6 +33,7 @@
     "gatsby-transformer-sharp": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.69.3"
   },
   "devDependencies": {
