--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
+    "browser-monads": "^1.0.0",
     "dotenv": "^16.3.1",
     "gatsby": "^5.12.4",
     "gatsby-core-utils": "^4.12.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-google-gtag": "^5.12.1",
     "gatsby-plugin-image": "^3.12.1",
     "gatsby-plugin-manifest": "^5.12.1",
